# problems-registry

./: .gitignore  404.html  CHANGELOG.md  README.md  Taskfile.yaml  index.html  mkdocs.yaml  openapi.yaml  pyproject.toml  search.html  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docs.yaml  package.yaml
already-exists/: index.html
bad-request/: index.html
business-rule-violation/: index.html
docs/: already-exists.md  bad-request.md  business-rule-violation.md  forbidden.md  gone.md  index.md  invalid-body-property-format.md  invalid-body-property-value.md  invalid-parameters.md  invalid-request-header-format.md  invalid-request-parameter-format.md  invalid-request-parameter-value.md  invalid-state-transition.md  json-schema.md  license-cancelled.md  license-expired.md  missing-body-property.md  missing-request-header.md  missing-request-parameter.md  not-found.md  openapi.yaml  server-error.md  service-unavailable.md  unauthorized.md  validation-error.md
docs/openapi/: index.html  index.yaml
forbidden/: index.html
gone/: index.html
invalid-body-property-format/: index.html
invalid-body-property-value/: index.html
invalid-parameters/: index.html
invalid-request-header-format/: index.html
invalid-request-parameter-format/: index.html
invalid-request-parameter-value/: index.html
invalid-state-transition/: index.html
json-schema/: index.html
license-cancelled/: index.html
license-expired/: index.html
missing-body-property/: index.html
missing-request-header/: index.html
missing-request-parameter/: index.html
not-found/: index.html
schemas/: openapi.yaml  schema.yaml
search/: search_index.json
server-error/: index.html
service-unavailable/: index.html
src/eoap_problems_registry/: __about__.py  __init__.py
tests/: test_problem_details_models.py
unauthorized/: index.html
validation-error/: index.html
