[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eoap-problems-registry"
dynamic = ["version"]
description = 'EOAP Problems Registry'

readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "info@terradue.com" },
  { name = "Simone Tripodi", email = "info@terradue.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic==2.13.4",
]

[project.urls]
Documentation = "https://github.com/eoap/problems-registry#readme"
Issues = "https://github.com/eoap/problems-registry/issues"
Source = "https://github.com/eoap/problems-registry"

[tool.hatch.version]
path = "src/eoap_problems_registry/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/eoap_problems_registry tests}"

[tool.coverage.run]
source_pkgs = ["eoap_problems_registry", "tests"]
branch = true
parallel = true
omit = [
  "src/eoap_problems_registry/__about__.py",
]

[tool.coverage.paths]
eoap_problems_registry = ["src/eoap_problems_registry", "*/eoap_problems_registry/src/eoap_problems_registry"]
tests = ["tests", "*/eoap_problems_registry/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.envs.test]
skip-install = false

dependencies = []


[tool.hatch.envs.test.scripts]
test = "python -m unittest discover -s tests -p 'test_*.py'"
testv = "python -m unittest discover -s tests -p 'test_*.py' -v"
cov = ["coverage run --source=src/eoap_problems_registry -m unittest discover -s tests -p 'test_*.py'", "coverage report"]
test-show-setup = "python -m unittest discover -s tests -p 'test_*.py' -v"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.dev]
description = "Development environment"
dependencies = [
  "pytest>=8.0",
  "ruff",
]

[tool.hatch.envs.dev.scripts]
lint = "ruff format ."
check = "ruff check --fix"
